# manga-colorizer

./: .gitignore  Justfile  README.md  downloads.dvc  manga-raw.dvc  notes.md  pyproject.toml
.dvc/: config
manga_colorizer/models/: clip_encoder.py  speech_bubble_segmenter.py
manga_colorizer/processors/: image_comparer.py  panel_cleaner.py
scripts/: clean_ink_images.py  eda.py  orb_image_match.py  remove_junk_images.py  scrape_op_images.py
tests/manga_colorizer/processors/: test_image_comparer.py  test_panel_cleaner.py
tests/scripts/: test_eda.py
