[tool.poetry]
name = "manga-colorizer"
version = "0.1.0"
description = ""
authors = ["David Wen <davidrwen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
types-beautifulsoup4 = "^4.12.0.20241020"
types-requests = "^2.32.0.20241016"
ruff = "^0.8.1"
mypy = "^1.13.0"


[tool.poetry.group.scrape.dependencies]
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
argparse = "^1.4.0"
httpx = "^0.28.0"
aiofiles = "^24.1.0"
types-aiofiles = "^24.1.0.20240626"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    # Pycodestyle - Warning
    "W",
    # isort
    "I",
    # mccabe
    "C90",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-async
    "ASYNC",
    # flake8-datetime-dtz
    "DTZ",
    # flake8-quotes
    "Q",
    # Pylint
    "PL",
    # Pygrep-hooks
    "PGH",
]
indent-width = 4
line-length = 80

